[project]
name = "tras"
version = "0.1.0"
description = "TRAS! - 나만의 여행 플랜 어시스턴트"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Yoo Young Seok", email = "richpinkr99@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "aiohttp>=3.12.13",
    "async-lru>=2.0.5",
    "bs4>=0.0.2",
    "google-auth-oauthlib>=1.2.2",
    "googlemaps>=4.10.0",
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.15",
    "langchain-community>=0.3.25",
    "langchain-google-community>=2.0.7",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=0.3.24",
    "langchain-tavily>=0.2.3",
    "langgraph>=0.4.8",
    "langgraph-supervisor>=0.0.27",
    "markdown>=3.8.2",
    "oauthlib>=3.3.0",
    "playwright>=1.52.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "streamlit>=1.46.0",
    "tweepy>=4.15.0",
    "unstructured>=0.17.2",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.isort]
known-first-party = ["app"]
